# GameSolver

./: CMakeLists.txt  config.json  main.cpp
alpha_beta/: alpha_beta.cpp  alpha_beta.h
core/: constants.h  fixed_vector.h  game.h  interface.cpp  interface.h  state.h  types.h  utilities.cpp  utilities.h
cpp/: main.cpp
cpp/core/: config.cpp  config.h  config_helper.h  constants.h  engine.h  game.h  interface.cpp  interface.h  utilities.cpp  utilities.h
cpp/gomoku/: gomoku.cpp  gomoku.h
cpp/mcts/: mcts.cpp
cpp/random_engine/: random_engine.h
gomoku/: gomoku.cpp  gomoku.h
mcts/: mcts.h
python/: main.py
random_engine/: random_engine.cpp
